--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": ".&#x2F;felab03-newssearch",
+  "name": "felab03-newssearch",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -13,6 +13,7 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
     }
   },
+  "testEnvironment": "jsdom",
   "scripts": {
     "test": "jest --verbose",
     "test:watch": "npm run test -- --watch",
