--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "moduleNameMapper": {
       "\\.(css)$": "identity-obj-proxy",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
-    }
+    },
+    "testEnvironment": "jsdom"
   },
-  "testEnvironment": "jsdom",
   "scripts": {
     "test": "jest --verbose",
     "test:watch": "npm run test -- --watch",
